--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,10 @@ main {
   padding: 50px;
   margin: 0 auto;
 }
-.table-container {
+.content > h1{
   text-align: center;
 }
-.table-container > table {
+table {
   margin: 70px 0 0 0 !important;
 }
 .table-actions{
