add login and register with foreign key in tasks for user creator task

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,8 @@ table {
   display: flex !important;
   gap: 15px;
 }
+.filter {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
